fix(ingest): correct logger instance and log messages in CSV loader