@@ -6,6 +6,8 @@ import dev.langchain4j.data.document.Document;
 import dev.langchain4j.data.document.loader.FileSystemDocumentLoader;
 import dev.langchain4j.data.document.parser.TextDocumentParser;
 import jakarta.enterprise.context.ApplicationScoped;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.IOException;
@@ -16,8 +18,12 @@ import java.util.List;
 
 @ApplicationScoped
 public class DocumentFromFileTxt implements DocumentLoaderService{
+
+    private static final Logger log = LoggerFactory.getLogger(DocumentFromFileTxt.class);
+
     public List<Document> load(Path filePath) throws IOException {
         File file = filePath.toFile();
+
         if (!file.exists()) {
             throw new IllegalArgumentException(
                     "El fichero o directorio no existe: " + filePath
@@ -30,19 +36,16 @@ public class DocumentFromFileTxt implements DocumentLoaderService{
         }
         PathMatcher soloTxt = FileSystems.getDefault().getPathMatcher("glob:**.txt");
         List<Document> documents = loadDocumentsRecursively(filePath, soloTxt, new TextDocumentParser());
+
         if (documents == null || documents.isEmpty()) {
-            throw new IllegalStateException(
-                    "No se pudo crear ningún documento a partir de: " + filePath
-            );
+            log.warn("No hay documentos de texto en '{}'.", filePath);
+            return List.of();
         }
-        for (Document doc : documents) {
-            if (doc.text() == null || doc.text().trim().isEmpty()) {
-                throw new IllegalArgumentException(
-                        "Se encontró un documento sin contenido de texto válido."
-                );
-            }
-        }
-        return documents;
+        // Documento en blanco: se omite, no se aborta el lote.
+        return documents.stream()
+                .filter(d -> d.text() != null && !d.text().isBlank())
+                .toList();
+
     }
 
     @Override
